# pros-client

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  index.tsx  package-info.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Searchbar.tsx
src/components/cards/: AccountsCard.tsx  Card.tsx  CardMenu.tsx
src/components/cq/: CQLeaderboardEntry.tsx  ChampionsQueue.tsx  ChampionsQueuePages.tsx
src/components/css/: accounts.css  card.css  cq.css  filters.css  notifications.css  players.css  searchbar.css  settings.css  sidebar.css  titlebar.css
src/components/notifications/: NotificationBanner.tsx  NotificationBar.tsx
src/components/players/: AccountsGroup.tsx  PlayerAccounts.tsx  Players.tsx  PlayersGroup.tsx  PlayersSection.tsx  PlayersSectionButton.tsx
src/components/settings/: Settings.tsx  SettingsEntry.tsx  SettingsItem.tsx  SettingsPage.tsx  SettingsPageAbout.tsx  SettingsSection.tsx
src/components/sidebar/: Sidebar.tsx  SidebarButton.tsx  SidebarFavorite.tsx
src/components/titlebar/: Titlebar.tsx  TitlebarControlsButton.tsx  TitlebarNavigationButton.tsx
src/context/: PlayerContext.tsx  SettingsContext.tsx
src/data/players/: lck.json
src/imports/: icons.ts  initializers.ts  interfaces.ts  licenses.ts  prototypes.ts  utils.ts
src/imports/enums/: commands.ts  lol.ts  states.ts  ui.ts
src/locales/: locales.ts
src/locales/br_BA/: translation.json
src/locales/en_UK/: translation.json
(+14 files in other folders)
