[package]
name = "pros"
version = "0.1.0"
description = "Desktop client for tracking and spectating pro League of Legends players."
authors = ["you"]
license = "MIT"
repository = "git+https://github.com/956MB/Pros.git"
default-run = "pros"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
# windows = "0.32.0"
# window-shadows = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
cargo-outdated = "0.11.2"
cocoa = "0.24.1"
objc = "0.2.7"

# [dev-dependencies]
# windows = "0.32.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
